--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -38,7 +38,7 @@
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous"></script>
 		<nav class="navbar navbar-default">
-		<div class="container-fluid">
+		<div class="container-fluid transparent">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed"
