Linking the about us page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">About us <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">소개글</a></li>
+							<li><a href="aboutus/index.html">소개글</a></li>
 							<li><a href="#">팀 소개</a></li>
 						</ul></li>
 					<li><a href="#">Festival</a></li>
