Change main page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">KBCE</a>
+				<a class="navbar-brand" href="index.html">KBCE</a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="navbar-collapse-1">
@@ -91,5 +91,13 @@
 			</div>
 		</div>
 	</nav>
+	
+	<div class="container-fluid">
+	<div class="jumbotron aboutus">
+	  <p><h1>KBCE</h1> is the newly founded charity organisation set up to organise cultural and educational activities to promote Korean culture in the UK, especially in the Kingston area.
+The aims and objectives are to help to understand each other’s culture, to exchange and embrace each other’s culture so that we are happier together in the neighborhood and to lead to more cooperation between the communities through artistic collaboration.
+If you like to have more information about Korean British Cultural Exchange and its activities, please send an email to <a href="mailto:kbce@kbce.org.uk">kbce@kbce.org.uk</a></p>
+	</div>
+	</div>
 </body>
 </html>
