--- a/index.html
+++ b/index.html
@@ -23,23 +23,15 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active" role="presentation"><a href="#" style="color:#e2001d;">HOME </a></li>
-                        <li role="presentation"><a href="#">ABOUT US</a></li>
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">FESTIVAL <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li role="presentation"><a href="#">First Item</a></li>
-                                <li role="presentation"><a href="#">Second Item</a></li>
-                                <li role="presentation"><a href="#">Third Item</a></li>
+                                <li role="presentation"><a href="#">EXHIBITION </a></li>
+                                <li role="presentation"><a href="#">MARKET FEST</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">EDUCATION <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li role="presentation"><a href="#">First Item</a></li>
-                                <li role="presentation"><a href="#">Second Item</a></li>
-                                <li role="presentation"><a href="#">Third Item</a></li>
-                            </ul>
-                        </li>
+                        <li role="presentation"><a href="#">EDUCATION </a></li>
                         <li role="presentation"><a href="#">ARCHIVE </a></li>
-                        <li role="presentation"><a href="#">CONTACT </a></li>
+                        <li role="presentation"><a href="#">WHO WE ARE</a></li>
                     </ul>
                 </div>
             </div>
@@ -48,11 +40,12 @@
     <div class="container post">
         <div class="row">
             <div class="col-md-12">
-                <div class="carousel slide" data-ride="carousel" id="carousel-1">
+                <div class="carousel slide" data-ride="carousel" id="carousel-1" style="width:940;">
                     <div class="carousel-inner" role="listbox">
-                        <div class="item active"><img class="img-responsive" src="assets/img/image_carousel_1.jpg" alt="Slide Image"></div>
-                        <div class="item"><img src="assets/img/image_carousel_1.jpg" alt="Slide Image"></div>
-                        <div class="item"><img src="assets/img/image_carousel_1.jpg" alt="Slide Image"></div>
+                        <div class="item active"><img class="img-responsive" src="assets/img/home_sliding-banner_01.jpg" alt="Slide Image" style="width:1140px;height:auto;"></div>
+                        <div class="item"><img class="img-responsive" src="assets/img/home_sliding-banner_02.jpg" alt="Slide Image" style="width:1140px;"></div>
+                        <div class="item"><img class="img-responsive" src="assets/img/home_sliding-banner_03.jpg" alt="Slide Image" style="width:1140px;"></div>
+                        <div class="item"><img class="img-responsive" src="assets/img/home_sliding-banner_04.jpg" alt="Slide Image" style="width:1140px;"></div>
                     </div>
                     <div><a class="left carousel-control" href="#carousel-1" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-1" role="button"
                         data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
@@ -60,6 +53,7 @@
                         <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-1" data-slide-to="1"></li>
                         <li data-target="#carousel-1" data-slide-to="2"></li>
+                        <li data-target="#carousel-1" data-slide-to="3"></li>
                     </ol>
                 </div>
             </div>
