--- a/festival/festival.html
+++ b/festival/festival.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="../assets/css/styles.min.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand navbar-link" href="#"><img src="assets/img/main/logo.png" style="width:184px;height:41px;"></a>
+                    <a class="navbar-brand navbar-link" href="#"><img src="../assets/img/main/logo.png" style="width:184px;height:41px;"></a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
@@ -37,41 +37,45 @@
             </div>
         </nav>
     </div>
-    <div class="container post">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="carousel slide" data-ride="carousel" id="carousel-1" style="width:940;">
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active"><img class="img-responsive" src="assets/img/main/home_sliding-banner_01.jpg" alt="Slide Image" style="width:1140px;height:auto;"></div>
-                        <div class="item"><img class="img-responsive" src="assets/img/main/home_sliding-banner_02.jpg" alt="Slide Image" style="width:1140px;"></div>
-                        <div class="item"><img class="img-responsive" src="assets/img/main/home_sliding-banner_03.jpg" alt="Slide Image" style="width:1140px;"></div>
-                        <div class="item"><img class="img-responsive" src="assets/img/main/home_sliding-banner_04.jpg" alt="Slide Image" style="width:1140px;"></div>
-                    </div>
-                    <div><a class="left carousel-control" href="#carousel-1" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-1" role="button"
-                        data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-1" data-slide-to="1"></li>
-                        <li data-target="#carousel-1" data-slide-to="2"></li>
-                        <li data-target="#carousel-1" data-slide-to="3"></li>
-                    </ol>
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="text-primary">KINGSTON KOREA FESTIVAL</h1></div>
+            </div>
+            <div class="row">
+                <div class="col-md-6" style="width:300px;height:400px;"><img src="../assets/img/festival/festival_poster.jpg" width="100%"></div>
+                <div class="col-md-6" style="width:870px;">
+                    <p style="font-size:16px;">Enjoy British Autumn, Korean Style
+                        <br/>
+                        <br/><strong>Exhibition | Kingston Museum, Kingston&nbsp;</strong>
+                        <br/>‘Dol’, Baby's&nbsp;First&nbsp;Birthday Celebration in Korea
+                        <br/>31st August ~ 3rd&nbsp;October 2017
+                        <br/>
+                        <br/><strong>Market Fest | Ancient Market Place, Kingston</strong>
+                        <br/>12:00~16:00 Sat 16th &nbsp;September 2017
+                        <br/>
+                        <br/>Kingston Korean Festival welcomes everyone to celebrate and experience Korean culture! Enjoy fun and inclusive arts activities for free!
+                        <br/>This year, the festival runs two family oriented programmes, an Exhibition and a Market Fest which are something new, unexpected, exciting and authentic!
+                        <br/>It will be a great opportunity for everyone to learn from each other to build a better Kingston. There will be fundraising activities along with the festival to support the local causes.
+                        <br/>
+                        <br/>The Kingston Korean Festival is an annual festival of celebrating vibrant Korean culture in Kingston and providing some of the most varied entertainment and educational programme for everyone.
+                        <br/>
+                        <br/>Funded by RBK
+                        <br/>Produced by KBCE
+                        <br/><a href="http://www.kbce.org.uk/" target="_blank">www.kbce.org.uk</a>
+                        <br/>
+                    </p>
                 </div>
             </div>
-            <div class="col-md-6 post-title"></div>
-            <div class="col-md-12"></div>
-        </div>
-    </div>
-    <div class="newsletter-subscribe">
-        <div class="container">
-            <h2 class="text-center">Subscribe for our Newsletter</h2>
-            <form class="form-inline" method="post">
-                <div class="form-group">
-                    <input class="form-control" type="email" name="email" placeholder="Your Email">
+            <div class="row">
+                <div class="col-lg-12 col-lg-offset-0 col-md-12">
+                    <div class="pull-right">
+    <img src="../assets/img/logo_kk festival.png" style="width:70px;" />
+    <img src="../assets/img/logo_kingston.jpg" style="width:100px;margin:10px;margin-top:30px;" />
+</div>
                 </div>
-                <div class="form-group">
-                    <button class="btn btn-primary" type="submit">Subscribe </button>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
     <footer>
@@ -79,7 +83,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
+    <script src="../assets/js/script.min.js"></script>
 </body>
 
 </html>
