Upload draft pages

--- a/festival/festival.html
+++ b/festival/festival.html
@@ -7,6 +7,7 @@
     <title>KBCE2017</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
 </head>
@@ -21,17 +22,17 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active" role="presentation"><a href="#" style="color:#e2001d;">HOME </a></li>
-                        <li class="dropdown open"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true" href="festival.html">FESTIVAL <span class="caret"></span></a>
+                        <li class="active" role="presentation"><a href="index.html" style="color:#e2001d;">HOME </a></li>
+                        <li class="dropdown open"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"><a href="festival/festival.html">FESTIVAL </a></li>
-                                <li role="presentation"><a href="exhibition.html">EXHIBITION </a></li>
-                                <li role="presentation"><a href="market.html">MARKET FEST</a></li>
+                                <li role="presentation"><a href="festival/exhibition.html">EXHIBITION </a></li>
+                                <li role="presentation"><a href="festival/market.html">MARKET FEST</a></li>
                             </ul>
                         </li>
-                        <li role="presentation"><a href="education.html">EDUCATION </a></li>
-                        <li role="presentation"><a href="archive.html">ARCHIVE </a></li>
-                        <li role="presentation"><a href="whoweare.html">WHO WE ARE</a></li>
+                        <li role="presentation"><a href="education/education.html">EDUCATION </a></li>
+                        <li role="presentation"><a href="archive/archive.html">ARCHIVE </a></li>
+                        <li role="presentation"><a href="contact/whoweare.html">WHO WE ARE</a></li>
                     </ul>
                 </div>
             </div>
@@ -44,8 +45,8 @@
                     <h1 class="text-primary">KINGSTON KOREA FESTIVAL</h1></div>
             </div>
             <div class="row">
-                <div class="col-md-6" style="width:300px;height:400px;"><img src="../assets/img/festival/festival_poster.jpg" width="100%"></div>
-                <div class="col-md-6" style="width:870px;">
+                <div class="col-lg-3 col-md-6" style="height:400px;"><img src="../assets/img/festival/festival_poster.jpg" width="100%"></div>
+                <div class="col-lg-9 col-md-6">
                     <p style="font-size:16px;">Enjoy British Autumn, Korean Style
                         <br/>
                         <br/><strong>Exhibition | Kingston Museum, Kingston&nbsp;</strong>
@@ -79,9 +80,10 @@
         </div>
     </div>
     <footer>
-        <h5>© 2017 Korean British Cultural Exchange . All right reserved</h5></footer>
+        <h5>© 2017 KBCE. All right reserved</h5></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="../assets/js/script.min.js"></script>
 </body>
