--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -7,6 +7,7 @@
     <title>KBCE2017</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
 </head>
@@ -21,17 +22,17 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active" role="presentation"><a href="#" style="color:#e2001d;">HOME </a></li>
-                        <li class="dropdown open"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true" href="festival.html">FESTIVAL <span class="caret"></span></a>
+                        <li class="active" role="presentation"><a href="index.html" style="color:#e2001d;">HOME </a></li>
+                        <li class="dropdown open"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"><a href="festival/festival.html">FESTIVAL </a></li>
-                                <li role="presentation"><a href="exhibition.html">EXHIBITION </a></li>
-                                <li role="presentation"><a href="market.html">MARKET FEST</a></li>
+                                <li role="presentation"><a href="festival/exhibition.html">EXHIBITION </a></li>
+                                <li role="presentation"><a href="festival/market.html">MARKET FEST</a></li>
                             </ul>
                         </li>
-                        <li role="presentation"><a href="education.html">EDUCATION </a></li>
-                        <li role="presentation"><a href="archive.html">ARCHIVE </a></li>
-                        <li role="presentation"><a href="whoweare.html">WHO WE ARE</a></li>
+                        <li role="presentation"><a href="education/education.html">EDUCATION </a></li>
+                        <li role="presentation"><a href="archive/archive.html">ARCHIVE </a></li>
+                        <li role="presentation"><a href="contact/whoweare.html">WHO WE ARE</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,14 +41,40 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12"></div>
+                <div class="col-md-6"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;">
+                    <p class="lead">is the newly founded charity organisation set up to organise cultural and educational activities to promote Korean culture in the UK, especially in the Kingston area.The aims and objectives are to help to understand each other’s culture,
+                        to exchange and embrace each other’s culture so that we are happier together in the neighborhood and to lead to more cooperation between the communities through artistic collaboration. </p>
+                    <p class="lead">Follow us on our Social media platforms</p>
+                    <p class="lead"><img src="../assets/img/logo_facebook.png" style="width:50px;margin:0px;margin-right:10px;margin-left:0px;"><img src="../assets/img/logo_insta.png" style="width:50px;"></p>
+                </div>
+                <div class="col-md-6">
+                    <div class="contact-clean" style="padding-top:0px;padding-bottom:0px;background-color:#ffffff;width:600;">
+                        <form method="post" style="margin-right:0px;margin-left:0px;width:600;max-width:600px;">
+                            <h2 class="text-left" style="margin-bottom:5px;">CONTACT</h2>
+                            <p class="lead">f you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p>
+                            <div class="form-group has-success has-feedback">
+                                <input class="form-control" type="text" name="name" placeholder="Name"><i class="form-control-feedback glyphicon glyphicon-ok" aria-hidden="true"></i></div>
+                            <div class="form-group has-error has-feedback">
+                                <input class="form-control" type="email" name="email" placeholder="Email"><i class="form-control-feedback glyphicon glyphicon-remove" aria-hidden="true"></i>
+                                <p class="help-block">Please enter a correct email address.</p>
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" rows="14" name="message" placeholder="Message"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-primary" type="submit">send </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <footer>
-        <h5>© 2017 Korean British Cultural Exchange . All right reserved</h5></footer>
+        <h5>© 2017 KBCE. All right reserved</h5></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="../assets/js/script.min.js"></script>
 </body>
