Added facebook page plugin

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 
 <body>
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.9&appId=567626093627040";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
     <div>
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
@@ -60,6 +68,16 @@
             </div>
             <div class="col-md-6 post-title"></div>
             <div class="col-md-12"></div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 col-xs-12">
+                <div class="fb-page" data-href="https://www.facebook.com/groups/KBCE2016/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
+            </div>
+            <div class="col-md-6 col-xs-12">
+                Instagram here
+            </div>
         </div>
     </div>
     <div class="newsletter-subscribe">
