--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <div class="col-md-12"></div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container post">
         <div class="row">
             <div class="col-md-6 col-xs-12">
-								<div class="fb-page" data-href="https://www.facebook.com/KBCE.Official/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KBCE.Official/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KBCE.Official/">KBCE</a></blockquote></div>
+								<div class="fb-page" data-href="https://www.facebook.com/KBCE.Official/" data-tabs="timeline" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KBCE.Official/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KBCE.Official/">KBCE</a></blockquote></div>
             </div>
             <div class="col-md-6 col-xs-12">
                 Instagram here
