--- a/index.html
+++ b/index.html
@@ -72,11 +72,27 @@
     </div>
     <div class="container post">
         <div class="row">
-            <div class="col-md-6 col-xs-12">
-								<div class="fb-page" data-href="https://www.facebook.com/KBCE.Official/" data-tabs="timeline" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KBCE.Official/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KBCE.Official/">KBCE</a></blockquote></div>
+            <div class="col-md-6 col-xs-12 clearfix center-block">
+								<div class="col-md-12">
+										<a type="button" class="btn col-md-12" href="https://www.facebook.com/groups/KBCE2016/">
+											<img src="assets/img/logo_facebook.png">
+											<h4>FACEBOOK</h4>
+										</a>
+								</div>
+								<div class="col-md-12">
+										<div class="fb-page" data-href="https://www.facebook.com/KBCE.Official/" data-tabs="timeline" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KBCE.Official/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KBCE.Official/">KBCE</a></blockquote></div>
+								</div>
             </div>
-            <div class="col-md-6 col-xs-12">
-                Instagram here
+            <div class="col-md-6 col-xs-12 clearfix center-block">
+								<div class="col-md-12">
+										<a type="button" class="btn col-md-12" href="https://www.instagram.com/_kbce/">
+											<img src="assets/img/logo_insta.png">
+											<h4>INSTAGRAM</h4>
+										</a>
+								</div>
+								<div class="col-md-12">
+										Instagram here
+								</div>
             </div>
         </div>
     </div>
