added sns links

--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -45,7 +45,8 @@
                     <p class="lead">is the newly founded charity organisation set up to organise cultural and educational activities to promote Korean culture in the UK, especially in the Kingston area.The aims and objectives are to help to understand each other’s culture,
                         to exchange and embrace each other’s culture so that we are happier together in the neighborhood and to lead to more cooperation between the communities through artistic collaboration. </p>
                     <p class="lead">Follow us on our Social media platforms</p>
-                    <p class="lead"><img src="../assets/img/logo_facebook.png" style="width:50px;margin:0px;margin-right:10px;margin-left:0px;"><img src="../assets/img/logo_insta.png" style="width:50px;"></p>
+                    <a type="button" class="btn col-md-6" href="https://www.facebook.com/KBCE.Official"><img src="../assets/img/logo_facebook.png"><h4><small>KBCE.Offcial</small></h4></a>
+                    <a type="button" class="btn col-md-6" href="https://www.instagram.com/_kbce/"><img src="../assets/img/logo_insta.png""><h4><small>_KBCE</small></h4></a>
                 </div>
                 <div class="col-md-6">
                     <div class="contact-clean" style="padding-top:0px;padding-bottom:0px;background-color:#ffffff;width:600;">
