--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <div class="row">
             <div class="col-md-6 col-xs-12 clearfix center-block">
 								<div class="col-md-12">
-										<a type="button" class="btn col-md-12" href="https://www.facebook.com/groups/KBCE2016/">
+										<a type="button" class="btn col-md-12" href="https://www.facebook.com/KBCE.Official">
 											<img src="assets/img/logo_facebook.png">
-											<h4>FACEBOOK</h4>
+											<h4>FACEBOOK <small>KBCE.Official</small></h4>
 										</a>
 								</div>
 								<div class="col-md-12">
@@ -87,7 +87,7 @@
 								<div class="col-md-12">
 										<a type="button" class="btn col-md-12" href="https://www.instagram.com/_kbce/">
 											<img src="assets/img/logo_insta.png">
-											<h4>INSTAGRAM</h4>
+											<h4>INSTAGRAM <small>_KBCE</small></h4>
 										</a>
 								</div>
 								<div class="col-md-12">
