--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										</a>
 								</div>
 								<div class="col-md-12">
-										<div class="fb-page" data-href="https://www.facebook.com/KBCE.Official/" data-tabs="timeline" data-width="100%" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KBCE.Official/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KBCE.Official/">KBCE</a></blockquote></div>
+										<div class="fb-page" data-href="https://www.facebook.com/KBCE.Official" data-tabs="timeline" data-width="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KBCE.Official" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KBCE.Official">KBCE</a></blockquote></div>
 								</div>
             </div>
             <div class="col-md-6 col-xs-12 clearfix center-block">
