Upload the festival pages

--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -7,6 +7,11 @@
     <title>KBCE2017</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Actor">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Armata">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
@@ -27,7 +32,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"><a href="festival/festival.html">FESTIVAL </a></li>
                                 <li role="presentation"><a href="festival/exhibition.html">EXHIBITION </a></li>
-                                <li role="presentation"><a href="festival/market.html">MARKET FEST</a></li>
+                                <li role="presentation"><a href="festival/community.html">COMMUNITY FEST</a></li>
                             </ul>
                         </li>
                         <li role="presentation"><a href="education/education.html">EDUCATION </a></li>
@@ -50,7 +55,7 @@
                 <div class="col-md-6">
                     <div class="contact-clean" style="padding-top:0px;padding-bottom:0px;background-color:#ffffff;width:600;">
                         <form method="post" style="margin-right:0px;margin-left:0px;width:600;max-width:600px;">
-                            <h2 class="text-left" style="margin-bottom:5px;">CONTACT</h2>
+                            <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;">CONTACT</h2>
                             <p class="lead">f you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p>
                             <div class="form-group has-success has-feedback">
                                 <input class="form-control" type="text" name="name" placeholder="Name"><i class="form-control-feedback glyphicon glyphicon-ok" aria-hidden="true"></i></div>
@@ -71,7 +76,7 @@
         </div>
     </div>
     <footer>
-        <h5>© 2017 KBCE. All right reserved</h5></footer>
+        <h5>© 2017 <span style="color:#eb4221"><b>KBCE</b></span> All right reserved</h5></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
