--- a/festival/exhibition.html
+++ b/festival/exhibition.html
@@ -7,6 +7,11 @@
     <title>KBCE2017</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Actor">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Armata">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
@@ -27,7 +32,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"><a href="festival/festival.html">FESTIVAL </a></li>
                                 <li role="presentation"><a href="festival/exhibition.html">EXHIBITION </a></li>
-                                <li role="presentation"><a href="festival/market.html">MARKET FEST</a></li>
+                                <li role="presentation"><a href="festival/community.html">COMMUNITY FEST</a></li>
                             </ul>
                         </li>
                         <li role="presentation"><a href="education/education.html">EDUCATION </a></li>
@@ -38,24 +43,48 @@
             </div>
         </nav>
     </div>
-    <div>
+    <div class="article-dual-column">
         <div class="container">
             <div class="row">
-                <div class="col-md-9">
-										<h4>EXHIBITION 'DOL'</h4>
-										<h4>BABY'S FIRST BIRTHDAY CELEBRATION IN KOREA</h4>
-										<br>
-										<h5>This exhibition will show a set of beautiful Korean traditional dress for the one-year-old babies for boys and girls along with a table for ‘Doljabee’ ceremony.
-										</h5>
-										<br>
-										<h5>‘Dol’ is the best known of the Korean birthday celebrations. It is also representing very unique and authentic Korean culture.  When a child lived to be a year old, parents are celebrating their joyous occasion with their family and friends. ‘Doljabee’ ceremony is the main celebration of ‘Dol’. A table is prepared with a large spool of thread, a brush, a Korean calligraphy set, a pencil, a book, money and a bow and arrow for boys or a needle, ruler and pair of scissors for girls. Then the baby picks up one item from the table that attracts him or her. The item that the child picks up is said to predict the child’s future. </h5>
-								</div>
-                <div class="col-md-3"><img class="img-responsive" src="../assets/img/exhibition.png"></div>
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="intro">
+                        <h1 class="text-left" style="color:#eb4221;font-family:Armata, sans-serif;"><strong>EXIHIBITION 'DOL'</strong></h1></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <h3 style="font-family:Armata, sans-serif;"><strong>BABY'S FIRST BIRTHDAY CELEBRATION IN KOREA </strong></h3></div>
+                <div class="col-lg-6 col-lg-offset-2 col-md-7 col-md-offset-1 col-sm-9">
+                    <div class="text">
+                        <p>The Kingston Korean Festival begins with the exhibition, Dol, Baby’s First Birthday Celebration in Korea. </p>
+                        <p>The exhibition will show a set of beautiful Korean traditional dress for the one-year-old babies for boys and girls along with a table for ‘Doljabee’ ceremony. ‘Dol’ is the best kwon of the Korean birthday celebrations. It represents
+                            very unique and authentic Korean culture. ‘Doljabee’ ceremony is the main celebration of ‘Dol’. A table is prepared with a large spool of thread, a brush, a Korean calligraphy set, a book, money and a bow and arrow for boys
+                            or a needle cushion or thimble for girls. Then the baby picks up one item from the table that attracts him or her. The item that the child picks up is said to predict the child’s future.&nbsp; </p>
+                        <p>A Korean traditional costume designer, Ms Hae Mi Lee has gratefully donated a set of Korean traditional dress to the Kingston Museum for better relationship between Korean and local people of Kingston. </p>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-3">
+                    <div class="toc">
+                        <figure><img class="img-responsive" src="../assets/img/exhibition.png"></figure>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <h3 style="font-family:Armata, sans-serif;"><strong>DESIGNER, HAE MI LEE</strong> </h3></div>
+                <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
+                    <div class="toc"></div>
+                </div>
+                <div class="col-lg-6 col-md-7 col-sm-9">
+                    <div class="text">
+                        <p>A designer, Ms Hae Mi&nbsp;Lee has donated a set of Korean traditional dress to the Kingston Museum to celebrate the occasion and to develop better relationship between Korean and local people of Kingston.&nbsp; </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <footer>
-        <h5>© 2017 KBCE. All right reserved</h5></footer>
+        <h5>© 2017 <span style="color:#eb4221"><b>KBCE</b></span> All right reserved</h5></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
