--- a/festival/festival.html
+++ b/festival/festival.html
@@ -7,6 +7,11 @@
     <title>KBCE2017</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Actor">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Armata">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
@@ -27,7 +32,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"><a href="festival/festival.html">FESTIVAL </a></li>
                                 <li role="presentation"><a href="festival/exhibition.html">EXHIBITION </a></li>
-                                <li role="presentation"><a href="festival/market.html">MARKET FEST</a></li>
+                                <li role="presentation"><a href="festival/community.html">COMMUNITY FEST</a></li>
                             </ul>
                         </li>
                         <li role="presentation"><a href="education/education.html">EDUCATION </a></li>
@@ -38,49 +43,46 @@
             </div>
         </nav>
     </div>
-    <div>
+    <div class="article-dual-column">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <h1 class="text-primary">KINGSTON KOREA FESTIVAL</h1></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6" style="height:400px;"><img src="../assets/img/festival/festival_poster.jpg" width="100%"></div>
-                <div class="col-lg-9 col-md-6">
-                    <p style="font-size:16px;">Enjoy British Autumn, Korean Style
-                        <br/>
-                        <br/><strong>Exhibition | Kingston Museum, Kingston&nbsp;</strong>
-                        <br/>‘Dol’, Baby's&nbsp;First&nbsp;Birthday Celebration in Korea
-                        <br/>31st August ~ 3rd&nbsp;October 2017
-                        <br/>
-                        <br/><strong>Market Fest | Ancient Market Place, Kingston</strong>
-                        <br/>12:00~16:00 Sat 16th &nbsp;September 2017
-                        <br/>
-                        <br/>Kingston Korean Festival welcomes everyone to celebrate and experience Korean culture! Enjoy fun and inclusive arts activities for free!
-                        <br/>This year, the festival runs two family oriented programmes, an Exhibition and a Market Fest which are something new, unexpected, exciting and authentic!
-                        <br/>It will be a great opportunity for everyone to learn from each other to build a better Kingston. There will be fundraising activities along with the festival to support the local causes.
-                        <br/>
-                        <br/>The Kingston Korean Festival is an annual festival of celebrating vibrant Korean culture in Kingston and providing some of the most varied entertainment and educational programme for everyone.
-                        <br/>
-                        <br/>Funded by RBK
-                        <br/>Produced by KBCE
-                        <br/><a href="http://www.kbce.org.uk/" target="_blank">www.kbce.org.uk</a>
-                        <br/>
-                    </p>
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="intro">
+                        <h1 class="text-left" style="color:#eb4221;font-family:Armata, sans-serif;"><strong>KINGSTON KOREAN FESTIVAL</strong></h1></div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 col-lg-offset-0 col-md-12">
-                    <div class="pull-right">
-    <img src="../assets/img/logo_kk festival.png" style="width:70px;" />
-    <img src="../assets/img/logo_kingston.jpg" style="width:100px;margin:10px;margin-top:30px;" />
-</div>
+                <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
+                    <div class="toc"><img class="img-responsive" src="../assets/img/festival/festival_poster.jpg" width="inherit" height="inherit"></div>
+                </div>
+                <div class="col-lg-6 col-md-7 col-sm-9">
+                    <div class="text">
+                        <p>Following the great success of last year’s Autumn Full Moon Festival, Kingston Korean Festival 2017 returns to Kingston where the biggest Korean community in Europe is based. This year, Kingston Korean Festival runs two main programmes
+                            to celebrate Korean culture and to engage with local people in many ways.&nbsp; Experience how Koreans are celebrating its first birthday at the Kingston Museum. Come and enjoy community Fest at the market place! Try Korean
+                            food and watch performances, such K-Dances, K-Music and Hapkido featuring by Koreans and Locals artists uniting together to give an outstanding show.
+                            <br/>Kingston Korean Festival presents something new, unexpected and exciting community event that Korean community would like to welcome everyone to experience Korean culture so we can better understand
+                            each other and build a better Kingston together. There will be fundraising activities and events to support local causes.&nbsp;</p>
+                        <h2 style="margin-bottom:5px;"><strong>Exhibition | Kingston Museum, Kingston</strong> </h2>
+                        <p>‘Dol’, Baby's&nbsp;First&nbsp;Birthday Celebration in Korea&nbsp;
+                            <br/>31st August ~ 3rd&nbsp;October 2017 </p>
+                        <h2 style="margin-bottom:5px;"><strong>Community Fest | Ancient Market Place, Kingston</strong> </h2>
+                        <p>12:00~16:00, Sat 16th &nbsp;September 2017 </p>
+                        <p>Kingston Korean Festival welcomes everyone to celebrate and experience Korean culture! Enjoy fun and inclusive arts activities for free!
+                            <br/>This year, the festival runs two family oriented programmes, an Exhibition and a Community Fest which are something new, unexpected, exciting and authentic!
+                            <br/>It will be a great opportunity for everyone to learn from each other to build a better Kingston. There will be fundraising activities along with the festival to support the local causes.</p>
+                        <p>The Kingston Korean Festival is an annual festival of celebrating vibrant Korean culture in Kingston and providing some of the most varied entertainment and educational programme for everyone. </p>
+                    </div>
+                    <div>
+                        <p>Funded by RBK
+                            <br/>Produced by KBCE
+                            <br/><a href="http://www.kbce.org.uk/" target="_blank">www.kbce.org.uk</a></p><img src="../assets/img/logo_kk festival.png" style="width:75px;"><img src="../assets/img/logo_kingston.jpg" style="width:120px;height:150;"></div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="brands"></div>
     <footer>
-        <h5>© 2017 KBCE. All right reserved</h5></footer>
+        <h5>© 2017 <span style="color:#eb4221"><b>KBCE</b></span> All right reserved</h5></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
