--- a/education/education.html
+++ b/education/education.html
@@ -7,6 +7,11 @@
     <title>KBCE2017</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Actor">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Armata">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="../assets/css/styles.min.css">
@@ -27,7 +32,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"><a href="festival/festival.html">FESTIVAL </a></li>
                                 <li role="presentation"><a href="festival/exhibition.html">EXHIBITION </a></li>
-                                <li role="presentation"><a href="festival/market.html">MARKET FEST</a></li>
+                                <li role="presentation"><a href="festival/community.html">COMMUNITY FEST</a></li>
                             </ul>
                         </li>
                         <li role="presentation"><a href="education/education.html">EDUCATION </a></li>
@@ -38,15 +43,49 @@
             </div>
         </nav>
     </div>
-    <div>
+    <div class="article-dual-column">
         <div class="container">
             <div class="row">
-                <div class="col-md-12"></div>
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="intro">
+                        <h1 class="text-center">Your Wonderful Article Title</h1>
+                        <p class="text-center"><span class="by">by</span> <a href="#">Author Name</a><span class="date">Sept 8th, 2016 </span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-2 col-lg-offset-2 col-md-offset-1 col-sm-3">
+                    <div class="toc">
+                        <p>Table of Contents</p>
+                        <ul>
+                            <li><a href="#">Aliquam In Arcu </a> </li>
+                            <li><a href="#">Ut vehicula rhoncus</a></li>
+                            <li><a href="#">Lorem Ipsum </a> </li>
+                            <li><a href="#">Dolor sit amet</a> </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-7 col-sm-9">
+                    <div class="text">
+                        <p>Sed lobortis mi. Suspendisse vel placerat ligula. <span style="text-decoration: underline;">Vivamus</span> ac sem lac. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in
+                            justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+                        <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac lacus. <strong>Ut vehicula rhoncus</strong> elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit <em>pulvinar dict</em> vel in justo. Vestibulum
+                            ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+                        <h2>Aliquam In Arcu </h2>
+                        <p>Suspendisse vel placerat ligula. Vivamus ac sem lac. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+                            posuere cubilia Curae.</p>
+                        <figure><img src="beach.jpg">
+                            <figcaption>Caption</figcaption>
+                        </figure>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Suspendisse vel placerat ligula. Vivamus ac sem lac. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit
+                            pulvinar dictum vel in justo.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <footer>
-        <h5>© 2017 KBCE. All right reserved</h5></footer>
+        <h5>© 2017 <span style="color:#eb4221"><b>KBCE</b></span> All right reserved</h5></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
