--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>KBCE2017</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Actor">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Armata">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
@@ -35,7 +40,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"><a href="festival/festival.html">FESTIVAL </a></li>
                                 <li role="presentation"><a href="festival/exhibition.html">EXHIBITION </a></li>
-                                <li role="presentation"><a href="festival/market.html">MARKET FEST</a></li>
+                                <li role="presentation"><a href="festival/community.html">COMMUNITY FEST</a></li>
                             </ul>
                         </li>
                         <li role="presentation"><a href="education/education.html">EDUCATION </a></li>
@@ -72,18 +77,22 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>Facebook </h1></div>
+                            <h2 style="font-family:Actor, sans-serif;">Facebook </h2></div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="fb-page" data-href="https://www.facebook.com/KBCE.Official" data-tabs="timeline" data-width="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KBCE.Official" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KBCE.Official">KBCE</a></blockquote></div>
+                            <div class="fb-page" data-href="https://www.facebook.com/KBCE.Official" data-tabs="timeline" data-width="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+    <blockquote cite="https://www.facebook.com/KBCE.Official" class="fb-xfbml-parse-ignore">
+        <a href="https://www.facebook.com/KBCE.Official">KBCE</a>
+    </blockquote>
+</div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>Instagram </h1></div>
+                            <h2 style="font-family:Actor, sans-serif;">Instagram </h2></div>
                     </div>
                     <div class="row">
                         <div class="col-md-12"></div>
@@ -100,13 +109,13 @@
                     <input class="form-control" type="email" name="email" placeholder="Your Email">
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary" type="submit">Subscribe </button>
+                    <button class="btn btn-primary" type="submit" style="background-color:#202780;">Subscribe </button>
                 </div>
             </form>
         </div>
     </div>
     <footer>
-        <h5>© 2017 KBCE. All right reserved</h5></footer>
+        <h5>© 2017 <span style="color:#eb4221"><b>KBCE</b></span> All right reserved</h5></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
