Change the contact page

--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -46,34 +46,34 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-6"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;">
-                    <p class="lead">is the newly founded charity organisation set up to organise cultural and educational activities to promote Korean culture in the UK, especially in the Kingston area.The aims and objectives are to help to understand each other’s culture,
+                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1" style="padding:20px;"><img src="../assets/img/main/logo.png" style="margin-left:-12px;width:250px;margin-bottom:5px;">
+                    <p class="lead" style="font-size:24px;">is the newly founded charity organisation set up to organise cultural and educational activities to promote Korean culture in the UK, especially in the Kingston area.The aims and objectives are to help to understand each other’s culture,
                         to exchange and embrace each other’s culture so that we are happier together in the neighborhood and to lead to more cooperation between the communities through artistic collaboration. </p>
-                    <p class="lead">Follow us on our Social media platforms</p>
+                    <p class="lead" style="font-size:24px;">Follow us on our Social media platforms</p>
                     <p class="lead"><img src="../assets/img/logo_facebook.png" style="width:50px;margin:0px;margin-right:10px;margin-left:0px;"><img src="../assets/img/logo_insta.png" style="width:50px;"></p>
                 </div>
-                <div class="col-md-6">
-                    <div class="contact-clean" style="padding-top:0px;padding-bottom:0px;background-color:#ffffff;width:600;">
-                        <form method="post" style="margin-right:0px;margin-left:0px;width:600;max-width:600px;">
-                            <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;">CONTACT</h2>
-                            <p class="lead">f you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p>
-                            <div class="form-group has-success has-feedback">
-                                <input class="form-control" type="text" name="name" placeholder="Name"><i class="form-control-feedback glyphicon glyphicon-ok" aria-hidden="true"></i></div>
-                            <div class="form-group has-error has-feedback">
-                                <input class="form-control" type="email" name="email" placeholder="Email"><i class="form-control-feedback glyphicon glyphicon-remove" aria-hidden="true"></i>
-                                <p class="help-block">Please enter a correct email address.</p>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" rows="14" name="message" placeholder="Message"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <button class="btn btn-primary" type="submit">send </button>
-                            </div>
-                        </form>
-                    </div>
+                <div class="col-lg-4 col-md-5">
+                    <div class="contact-clean" style="padding-bottom:0px;background-color:#ffffff;padding-top:0px;"></div>
+                    <form method="post" style="max-width:600px;">
+                        <h2 class="text-left" style="margin-bottom:5px;color:#eb4221;"><strong>CONTACT</strong></h2>
+                        <p class="lead" style="font-size:14px;">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p><img class="img-responsive" src="../assets/img/who-we-are_02.jpg" style="margin-top:10px;margin-bottom:10px;">
+                        <div
+                        class="form-group has-success has-feedback">
+                            <input class="form-control" type="text" name="name" placeholder="Name"><i class="form-control-feedback glyphicon glyphicon-ok" aria-hidden="true"></i></div>
+                <div class="form-group has-error has-feedback">
+                    <input class="form-control" type="email" name="email" placeholder="Email"><i class="form-control-feedback glyphicon glyphicon-remove" aria-hidden="true"></i>
+                    <p class="help-block">Please enter a correct email address.</p>
                 </div>
+                <div class="form-group">
+                    <textarea class="form-control" rows="8" name="message" placeholder="Message"></textarea>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit" style="background-color:#202780;">SEND </button>
+                </div>
+                </form>
             </div>
         </div>
+    </div>
     </div>
     <footer>
         <h5>© 2017 <span style="color:#eb4221"><b>KBCE</b></span> All right reserved</h5></footer>
