Fix missing items in the education page

--- a/education/education.html
+++ b/education/education.html
@@ -180,14 +180,14 @@
                         <div>
                             <h4 style="font-family:'Droid Sans', sans-serif;">Tags </h4>
                             <div class="h-divider">
-                            <p><small>Text</small></p>
+                            <p>Dance, Food, Hanbok, Hapkito, K-food, K-pop, Kimchi, Korean, Martial Arts, Mystic Nights</p>
                         </div>
                     </div>
                     <div class="row" style="margin-right:0px;margin-left:0px;">
                         <div>
                             <h4 style="font-family:'Droid Sans', sans-serif;">Follow </h4>
                             <div class="h-divider">
-                            <div><img><img></div>
+                            <p class="lead" style="margin-top:10px;"><img src="../assets/img/logo_facebook.png" style="width:38px;margin:0px;margin-right:10px;margin-left:0px;"><img src="../assets/img/logo_insta.png" style="width:38px;"></p>
                         </div>
                     </div>
                 </div>
