Fix a wrong redirection relative URL

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=/home/home.html">
-        <script type="text/javascript">
-            window.location.href = "/home/home.html"
-        </script>
-        <title>Page Redirection</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="1; url=home/home.html">
+    <script type="text/javascript">
+        window.location.href = "home/home.html"
+    </script>
+    <title>Page Redirection</title>
 </head>
 
 <body>
